added eraser and doodle button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div id="container">
     </div>
+    <button id="btnEraser">eraser</button>
+    <button id="btnDoodle">Start Doodlin</button>
 </body>
 <script src="index.js"></script>
 </html>
